<resources>
    <string name="app_name">Catch Forms</string>
    <string-array name="ll">
        <item>Hindi</item>
        <item>English</item>
        <item>Punjabi</item>
    </string-array>
    <string name="facebook_app_id"> 291600691287012</string>
    <string name="fb_login_protocol_scheme">fb 291600691287012</string>
    <string name="title_activity_firstscreen">firstscreen</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="news">News</string>
    <string name="title_activity_maps">Map</string>
    <string name="displayInfo">Display</string>
    <string name="home">Home</string>
    <string name="yojna">Yojna</string>
    <string name="Locate">Center</string>
    <string name="IDforms">ID Forms</string>
    <string name="General">General</string>
    <string name="logout">Logout</string>
    <string name="Drive">Drive</string>
    <string name="Setting">Settings</string>
    <string name="Language">Language</string>
    <string name="Rate_us">Rate us</string>
    <string name="share">Share</string>
    <string name="apply">Apply</string>
    <string name="login">Login</string>
    <string name="more">More</string>
    <string name="feedback">Feedback</string>
    <string name="send"></string>
    <string name="profile">Cafe Center Profile</string>
    <string-array name="list">
        <item>Aadhar card</item>
        <item>Voter Id Card</item>
        <item>Pan Card</item>
        <item>Ration Card</item>
        <item>Driving License</item>

    </string-array>
    <string-array name="aadhar">
        <item>Applying Procedure</item>
        <item>Documents Required</item>
        <item>Duplicate</item>
        <item>Correction</item>
        <item>Keep track</item>
    </string-array>
    <string-array name="Voter">
        <item>Applying Procedure</item>
        <item>Documents Required</item>
        <item>Eligibility Criteria</item>
        <item>Lost</item>
        <item>Correction</item>
        <item>Check List</item>
    </string-array>
    <string-array name="pan">
        <item>Applying Procedure</item>
        <item>Documents Required</item>
        <item>Duplicate</item>
        <item>Correction</item>
    </string-array>
    <string-array name="Ration">
        <item>Applying Procedure</item>
        <item>Documents Required</item>
        <item>Duplicate</item>
        <item>Track Status</item>
        <item>Add Member</item>
    </string-array>
    <string-array name="Driving">
        <item>Applying procedure</item>
        <item>Documents Required</item>
        <item>Duplicate</item>
        <item>Renew</item>
    </string-array>
    <string-array name="aadharapply">
        <item>Locate Enrolment center</item>
        <item>check Aadhar status</item>
        <item>Download Aadhar</item>
        <item>Retrieve Lost Aadhar</item>
    </string-array>
    <string-array name="voterapply">
        <item>Apply Online</item>
        <item>Check status</item>
        <item>Search your name in electoral list</item>
        <item>Update Voter ID Card</item>
    </string-array>
    <string-array name="pancardapply">
        <item>Apply Online</item>
        <item>Check status</item>
        <item>Duplicate Pancard</item>
        <item>Update Pancard</item>
    </string-array>
    <string-array name="rationapply">
        <item>Apply Online</item>
        <item>Check status</item>
        <item>Download e-Ration card</item>
        <item>Update Mobile Number</item>
    </string-array>
    <string-array name="drivingapply">
        <item>Apply online</item>
        <item>Track DL status</item>
        <item>Online payment</item>
    </string-array>
    <string-array name="mapdata">
        <item>Aadhar card</item>
        <item>Voter Id Card</item>
        <item>Pan Card</item>
        <item>Ration Card</item>

    </string-array>
    <string-array name="general_data">
        <item>Gas connection</item>
        <item>Electricity connection</item>
        <item>Water connection</item>
    </string-array>
    <string-array name="gas">
        <item>Indane gas</item>
        <item>Bharat gas</item>
        <item>Hp gas</item>
    </string-array>
    <string-array name="elec">
        <item>BSES Delhi</item>
    </string-array>
    <string-array name="spinner">
        <item>State</item>
        <item>Andhra Pradesh</item>
        <item>Arunachal Pradesh</item>
        <item>Assam</item>
        <item>Bihar</item>
        <item>Chhattisgarh</item>
        <item>Delhi</item>
        <item>Goa</item>
        <item>Gujarat</item>
        <item>Haryana</item>
        <item>Himachal Pradesh</item>
        <item>Jammu and Kashmir</item>
        <item>Jharkhand</item>
        <item>Karnataka</item>
        <item>Kerala</item>
        <item>Madhya Pradesh</item>
        <item>Maharashtra</item>
        <item>Manipur</item>
        <item>Meghalaya</item>
        <item>Mizoram</item>
        <item>Nagaland</item>
        <item>Odisha</item>
        <item>Punjab</item>
        <item>Rajasthan</item>
        <item>Sikkim</item>
        <item>Tamil Nadu</item>
        <item>Telangana</item>
        <item>Tripura</item>
        <item>Uttar Pradesh</item>
        <item>Uttarakhand</item>
        <item>West Bengal</item>
    </string-array>
    <string name="next">NEXT</string>
    <string name="skip">SKIP</string>
    <string name="slide_1_title">=Make your Cyber cafe!</string>
    <string name="slide_1_desc">The easiest way to ! </string>
    <string name="slide_2_title">Movie Tickets</string>
    <string name="slide_2_desc">Book movie tickets for your family and friends!</string>
    <string name="slide_3_title">Great Discounts</string>
    <string name="slide_3_desc">Best discounts on every single service we offer!</string>
    <string name="slide_4_title">World Travel</string>
    <string name="slide_4_desc">Book tickets of any transportation and travel the world!</string>
    <string-array name="water">
        <item>Delhi Jal Board</item>
    </string-array>
    <string name="title_activity_scrolling">ScrollingActivity</string>
    <string name="prompt_password">Password </string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_in_short">Sign in</string>
</resources>