<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">

        <item
            android:id="@+id/nav_rateus"
            android:icon="@drawable/ic_star_black_24dp"
            android:title="@string/Rate_us" />
        <item
            android:id="@+id/nav_profile"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/profile" />

        <item
            android:id="@+id/language"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/Language" />
        <item
            android:id="@+id/logincheck"
            android:title="@string/login"
            android:icon="@drawable/ic_vpn_key_black_24dp"></item>
    </group>

    <item android:title="Communicate">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_menu_share"
                android:title="@string/share" />
            <item
                android:id="@+id/feedback"
                android:icon="@drawable/ic_menu_send"
                android:title="@string/feedback" />
        </menu>
    </item>

</menu>
