<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:background="@color/Silver"

    tools:context="com.catchforms.vinod.rupesh.LoginActivity">

    <!-- Login progress -->
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="fitXY"
        android:alpha="0.5"
        />
    <ProgressBar
        android:id="@+id/login_progress"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:visibility="gone" />

    <ScrollView
        android:id="@+id/login_form"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/email_login_form"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:textSize="20dp"
                android:paddingTop="20dp"
                android:textColor="@color/black"
                android:text="Login for Cyber Cafe"/>
            <LinearLayout

                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingBottom="@dimen/activity_vertical_margin"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"

                >



                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:background="@drawable/back"
                    android:layout_marginTop="30dp"
                    android:padding="10dp"

                    >


                    <android.support.design.widget.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <AutoCompleteTextView
                            android:id="@+id/mobilelogin"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="Mobile Number"
                            android:inputType="phone"
                            android:maxLines="1"
                            android:singleLine="true" />

                    </android.support.design.widget.TextInputLayout>

                    <android.support.design.widget.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <EditText
                            android:id="@+id/password"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/prompt_password"
                            android:imeActionId="@+id/login"
                            android:imeActionLabel="@string/action_sign_in_short"
                            android:imeOptions="actionUnspecified"
                            android:inputType="textPassword"
                            android:maxLines="1"
                            android:singleLine="true" />

                    </android.support.design.widget.TextInputLayout>
                    <Button
                        android:id="@+id/email_sign_in_button"
                        style="?android:textAppearanceSmall"
                        android:layout_width="200dp"
                        android:layout_gravity="center"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="16dp"
                        android:background="@drawable/cyber"
                        android:textColor="#fff"
                        android:textSize="20dp"
                        android:text="@string/action_sign_in"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/forgotpass"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingTop="20dp"
                        android:layout_weight="1"
                        android:clickable="true"
                        android:textColor="@color/colorPrimary"
                        android:textStyle="bold"
                        android:layout_gravity="center"
                        android:text="FORGOT PASSWORD ?"/>



                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Create account with:"
                        android:textSize="18dp"
                        android:textColor="@color/black"
                        android:layout_gravity="center"
                        android:paddingTop="10dp"/>
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:weightSum="2"
                        android:padding="5dp"
                        android:orientation="horizontal">
                        <Button
                            android:id="@+id/signgoogle"
                            style="?android:textAppearanceSmall"
                            android:layout_width="match_parent"
                            android:layout_height="40dp"
                            android:layout_marginTop="16dp"
                            android:layout_weight="1"
                            android:background="@drawable/backsd"
                            android:text="Google "
                            android:drawableLeft="@drawable/google"
                            android:paddingLeft="5dp"
                            android:layout_marginRight="5dp"
                            android:textColor="#fff"
                            android:textSize="13dp"
                            android:textStyle="bold"/>


                        <com.facebook.login.widget.LoginButton
                            android:id="@+id/signfacebook"
                            android:layout_width="match_parent"
                            android:layout_height="40dp"
                            android:layout_marginTop="16dp"
                            android:layout_weight="1"
                            android:layout_marginLeft="5dp"
                            android:text="facebook"
                            android:textSize="20dp"

                            android:textColor="#fff"
                            android:textStyle="bold" />

                    </LinearLayout>
                </LinearLayout>

            </LinearLayout>




        </LinearLayout>
    </ScrollView>
    </FrameLayout>
</LinearLayout>
